# -*- coding: utf-8 -*-

[package]
name        = "timeslice"
version     = "0.1.0"
edition     = "2021"
readme      = "README.md"

[dependencies]
cfg-if = "1"
esp-idf-hal = { version = "0.42", optional = true }
esp-idf-svc = { version = "0.47", optional = true }
lazy_static = "1"
paste = "1"

[features]
default = [ "hal-dummy", "meas" ]
meas = []
hal-espidf = [ "dep:esp-idf-hal", "dep:esp-idf-svc" ]
hal-dummy = []

# vim: ts=4 sw=4 expandtab
