# -*- coding: utf-8 -*-

[package]
name        = "timeslice"
description = "Simple periodic time slice scheduler"
version     = "0.1.0"
edition     = "2021"
authors     = [ "Michael Büsch <m@bues.ch>" ]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://bues.ch/cgit/timeslicers.git"

categories  = [ "concurrency", "embedded", "hardware-support" ]
keywords    = [ "scheduler", "task", "periodic" ]

[dependencies]
cfg-if = "1"
esp-idf-hal = { version = "0.42", optional = true }
esp-idf-svc = { version = "0.47", optional = true }
lazy_static = "1"
paste = "1"

[features]
default = [ "hal-dummy", "meas" ]
meas = []
hal-espidf = [ "dep:esp-idf-hal", "dep:esp-idf-svc" ]
hal-dummy = []

# vim: ts=4 sw=4 expandtab
