# -*- coding: utf-8 -*-

[package]
name = "timeslice"
description = "Simple periodic time slice scheduler"
version = "0.6.0"
edition = "2024"
rust-version = "1.88"
authors = [ "Michael Büsch <m@bues.ch>" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mbuesch/timeslicers.git"
#repository = "https://bues.ch/cgit/timeslicers.git"

categories = [ "concurrency", "embedded", "hardware-support" ]
keywords = [ "scheduler", "task", "periodic" ]

[dependencies]
cfg-if = "1"
esp-idf-hal = { version = "0.46", optional = true }
esp-idf-svc = { version = "0.52", optional = true }
pastey = "0.2"

[features]
default = [ "hal-dummy", "meas" ]
meas = []
hal-espidf = [ "dep:esp-idf-hal", "dep:esp-idf-svc" ]
hal-dummy = []

# vim: ts=4 sw=4 expandtab
